--- a/QuantSight /requirements.txt
+++ b/QuantSight /requirements.txt
@@ -1,6 +1,7 @@
-streamlit
-yfinance
-pandas
-pandas_ta
-matplotlib
-scikit-learn
+streamlit==1.35.0
+yfinance==0.2.36
+pandas==2.2.2
+pandas_ta==0.3.14b0
+matplotlib==3.7.5
+scikit-learn==1.3.2
+numpy==1.24.4
